# python-template

./: README.md  cookiecutter.json  pyproject.toml
.githooks/: pre-push
.github/workflows/: lint.yml
src/template/: main.py
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  README.md  makefile  pyproject.toml
{{cookiecutter.project_name}}/.githooks/: pre-commit
{{cookiecutter.project_name}}/.github/workflows/: lint.yml  precommit.yml
{{cookiecutter.project_name}}/src/{{cookiecutter.package_name}}/: main.py
