[project]
name = "{{ cookiecutter.package_name }}"
version = "1.0.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "Robin Yuen Shing Hei", email = "robin.ysh@gmail.com"},
]
dependencies = [
    "typer>=0.15.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.optional_dependencies]
dev = [
    "icecream>=2.1.3",
    "tqdm>=4.65.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "pylint>=2.17.5",
    "yq>=3.2.3"
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.scripts]
start.env_file=".env"
pdm-autoflake.shell = "git ls-files '*.py' | xargs -t pdm run autoflake --in-place --expand-star-imports --remove-all-unused-imports --ignore-init-module-imports"
pdm-isort.shell = "git ls-files '*.py' | xargs -t pdm run isort -q"
pdm-black.shell = "git ls-files '*.py' | xargs -t pdm run black -q"
lint-format-python.composite = ["pdm-autoflake", "pdm-isort", "pdm-black"]
lint-format-gitignore.shell = "git ls-files '.gitignore' | xargs -tI {} sort -o {} {}"
lint-format-yaml.shell = "git ls-files '*.yml' '*.yaml' | xargs -t pdm run yq -i -S -Y -w 10000 ."
lint-format.composite = ["lint-format-python", "lint-format-gitignore", "lint-format-yaml"]
pdm-flake8.shell = "git ls-files '*.py' | xargs -t pdm run flake8"
pdm-pylint.shell = "git ls-files '*.py' | xargs -t pdm run pylint"
lint-format.env = {LC_ALL="C"}
lint.composite = ["pdm-flake8", "pdm-pylint"]
start.shell = "if [ -e .env ]; then pdm run python src/{{cookiecutter.package_name}}/main.py; else echo 'Make a copy of .env from .env.sample before you start.'; fi"
pre_install.shell = "export CMAKE_ARGS='-DLLAMA_CUBLAS=on' FORCE_CMAKE=1"
