[project]
name = "{{ cookiecutter.package_name }}"
version = "1.0.0"
description = "{{ cookiecutter.project_description }}"
authors = [
    {name = "Robin Yuen Shing Hei", email = "robin.ysh@gmail.com"},
]
dependencies = [
    "typer>=0.15.3",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.3",
    "tqdm>=4.65.0",
    "flake8>=6.0.0",
    "black>=23.3.0",
    "isort>=5.12.0",
    "autoflake>=2.2.0",
    "pylint>=2.17.5",
    "yq>=3.2.3",
    "pre-commit>=4.2.0",
]

[tool.pylint]
messages_control.disable = "logging-fstring-interpolation,unspecified-encoding"
max-line-length = "88" # black max value

[tool.ruff]
ignore = [
    "E501",
    "PGH004"
]
